--- a/week02/lymeng/python/前中后序遍历.ipynb
+++ b/week02/lymeng/python/前中后序遍历.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "6832ef9a",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "48a813db",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "cdc96e16",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "        Root = TreeNode(vals[0])\n",
     "        vals.pop(0)\n",
     "        Root.left = Creat_Tree(Root.left,vals)\n",
-    "        Root.left = Creat_Tree(Root.left,vals)\n",
+    "        Root.right = Creat_Tree(Root.right,vals)\n",
     "        return Root#本次递归要返回给上一次的本层构造好的树的根节点\n",
     "    else:\n",
     "        Root=None\n",
@@ -59,19 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "b11d7687",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'val'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m vals\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(strs)\n\u001b[0;32m      5\u001b[0m Roots\u001b[38;5;241m=\u001b[39mCreat_Tree(Root,vals)\u001b[38;5;66;03m#Roots就是我们要的二叉树的根节点。\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mRoots\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mright\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mval\u001b[49m)\n\u001b[0;32m      7\u001b[0m res\u001b[38;5;241m=\u001b[39mpreorderTraversal(Roots)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m res:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'val'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n"
      ]
     }
    ],
@@ -81,7 +81,6 @@
     "    strs=\"abc##d##e##\"#前序遍历扩展的二叉树序列\n",
     "    vals= list(strs)\n",
     "    Roots=Creat_Tree(Root,vals)#Roots就是我们要的二叉树的根节点。\n",
-    "    print(Roots.right.val)\n",
     "    res=preorderTraversal(Roots)\n",
     "    for num in res:\n",
     "        print(num)"
