feat(hw2): get the depth of the bi-tree

--- a/week02/niu_hf/hw2.ipynb
+++ b/week02/niu_hf/hw2.ipynb
@@ -30,12 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
@@ -49,6 +44,7 @@
    ],
    "source": [
     "from typing import Union, List\n",
+    "from collections import deque\n",
     "\n",
     "class BTNode:\n",
     "\n",
@@ -99,9 +95,9 @@
     "\n",
     "            else:  # drop the ele with same val\n",
     "                return\n",
-    "            \n",
-    "            \n",
-    "    def pre_order(self):\n",
+    "\n",
+    "\n",
+    "    def pre_order(self) -> List[BTNode]:\n",
     "        output = []\n",
     "        def pre(node):\n",
     "            if node:\n",
@@ -110,8 +106,8 @@
     "                pre(node.right)\n",
     "        pre(self.root)\n",
     "        return output\n",
-    "    \n",
-    "    def in_order(self):\n",
+    "\n",
+    "    def in_order(self) -> List[BTNode]:\n",
     "        output = []\n",
     "        def _in(node):\n",
     "            if node:\n",
@@ -120,8 +116,8 @@
     "                _in(node.right)\n",
     "        _in(self.root)\n",
     "        return output\n",
-    "    \n",
-    "    def post_order(self):\n",
+    "\n",
+    "    def post_order(self) -> List[BTNode]:\n",
     "        output = []\n",
     "        def post(node):\n",
     "            if node:\n",
@@ -130,7 +126,7 @@
     "                output.append(node.data)\n",
     "        post(self.root)\n",
     "        return output\n",
-    "    \n",
+    "\n",
     "    def reverse(self):\n",
     "        def rvs(node):\n",
     "            if node:\n",
@@ -138,34 +134,68 @@
     "                rvs(node.left)\n",
     "                rvs(node.right)\n",
     "        rvs(self.root)\n",
-    "        \n",
     "\n",
-    "        \n",
+    "    def get_depth(self) -> int:\n",
+    "        cursor = deque([[self.root]])\n",
+    "        depth = 0\n",
+    "\n",
+    "        while len(cursor) > 0:\n",
+    "            anchors = cursor.popleft()\n",
+    "            depth += 1\n",
+    "\n",
+    "            tmp = []\n",
+    "            for anchor_i in anchors:\n",
+    "                if anchor_i.left:\n",
+    "                    tmp.append(anchor_i.left)\n",
+    "                if anchor_i.right:\n",
+    "                    tmp.append(anchor_i.right)\n",
+    "\n",
+    "            if tmp:\n",
+    "                cursor.append(tmp)\n",
+    "\n",
+    "        return depth\n",
+    "\n",
+    "\n",
     "tree1 = BiTree([1,2,3,4,5,6,7,8,9,10])\n",
     "print(\"pre_order of tree1: {}\".format(tree1.pre_order()))\n",
     "print(\"in_order of tree1: {}\".format(tree1.in_order()))\n",
     "print(\"post_order of tree1: {}\".format(tree1.post_order()))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Q2\n",
     "二叉树的反转"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "pre_order of reversed tree1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "in_order of reversed tree1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "in_order of reversed tree1: [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
       "post_order of reversed tree1: [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
      ]
     }
@@ -180,7 +210,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Q3\n",
     "求二叉树的最大深度"
@@ -188,10 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 38,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The depth of the tree is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree2 = BiTree([1,2,3,4,5,6,7,8,9,10])\n",
+    "depth = tree2.get_depth()\n",
+    "print(\"The depth of the tree is {}\".format(depth))"
+   ]
   }
  ],
  "metadata": {
