--- a/week02/niu_hf/hw2.ipynb
+++ b/week02/niu_hf/hw2.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pre_order of tree1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "in_order of tree1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "post_order of tree1: [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+      "pre_order of tree1: [4, 1, 3, 2, 5, 7, 6, 9, 8]\n",
+      "in_order of tree1: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "post_order of tree1: [2, 3, 1, 6, 8, 9, 7, 5, 4]\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
     "        return depth\n",
     "\n",
     "\n",
-    "tree1 = BiTree([1,2,3,4,5,6,7,8,9,10])\n",
+    "tree1 = BiTree([4,1,3,2,5,7,9,6,8])\n",
     "print(\"pre_order of tree1: {}\".format(tree1.pre_order()))\n",
     "print(\"in_order of tree1: {}\".format(tree1.in_order()))\n",
     "print(\"post_order of tree1: {}\".format(tree1.post_order()))"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -233,15 +233,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The depth of the tree is 10\n"
+      "The depth of the tree is 5\n"
      ]
     }
    ],
    "source": [
-    "tree2 = BiTree([1,2,3,4,5,6,7,8,9,10])\n",
+    "tree2 = BiTree([4,1,3,2,5,7,9,6,8])\n",
     "depth = tree2.get_depth()\n",
     "print(\"The depth of the tree is {}\".format(depth))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
